new Exception, cart validation
