# src/Web/Controller/CartController.php
@@ -12,6 +12,7 @@ use App\Common\Domain\Query\Searcher;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
+use OpenApi\Annotations as OA;
 
 class CartController extends Controller
 {
@@ -20,6 +21,22 @@ class CartController extends Controller
         return $this->searcherFactory->build('Cart');
     }
 
+    /**
+     * @OA\Post(
+     *     path="/cart",
+     *     tags={"cart"},
+     *     operationId="createCart",
+     *     @OA\Response(
+     *         response=201,
+     *         description="Created",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Validation exception",
+     *     ),
+     *     requestBody={"$ref": "#/components/requestBodies/Cart"}
+     * )
+     */
     public function createCart(Request $request)
     {
         $body = json_decode($request->getContent(), true);
@@ -36,6 +53,24 @@ class CartController extends Controller
         );
     }
 
+    /**
+     * @OA\Get(
+     *     path="/cart/{id}",
+     *     tags={"cart"},
+     *     operationId="getCart",
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          @OA\Schema(
+     *              type="int",
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="success",
+     *     ),
+     * )
+     */
     public function getCart(int $slug)
     {
         $response = $this->getSearcher()->searchOne(
@@ -50,6 +85,29 @@ class CartController extends Controller
         );
     }
 
+    /**
+     * @OA\Put(
+     *     path="/cart/{id}/add",
+     *     tags={"cart"},
+     *     operationId="addProductsToCart",
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          @OA\Schema(
+     *              type="int",
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Added",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Validation exception",
+     *     ),
+     *     requestBody={"$ref": "#/components/requestBodies/Cart"}
+     * )
+     */
     public function addProductsToCart(int $slug, Request $request)
     {
         $body = json_decode($request->getContent(), true);
@@ -61,6 +119,29 @@ class CartController extends Controller
         return new JsonResponse('Products added', Response::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Put(
+     *     path="/cart/{id}/remove",
+     *     tags={"cart"},
+     *     operationId="removeProductsFromCart",
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          @OA\Schema(
+     *              type="int",
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Added",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Validation exception",
+     *     ),
+     *     requestBody={"$ref": "#/components/requestBodies/Cart"}
+     * )
+     */
     public function removeProductsFromCart(int $slug, Request $request)
     {
         $body = json_decode($request->getContent(), true);
